# lab08

./: .~lock.Dockerfile#  CMakeLists.txt  Dockerfile  README.md  hello_world.cpp
.github/workflows/: cmake.yml
examples/: example2.cpp
